fix: more than one instance of a number input causes bug on mobile, switching to text inputs

--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -28,11 +28,6 @@
   justify-content: space-between;
 }
 
-/* .container h3 {
-  align-self: flex-start;
-  padding-bottom: 90px;
-} */
-
 .loginCard {
   /* dev */
   /* border: 5px solid red; */
